fix: removed extra margin from footer

--- a/css/home.css
+++ b/css/home.css
@@ -98,8 +98,6 @@
 .footer {
   color: var(--color-secondary);
   background: var(--color-primary);
-
-  margin: 1rem 0 0 0;
 }
 
 .social-link-footer:hover {
